# FastApiCodeS

./: .gitignore  pyproject.toml
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 186251c6719c_fix_uuid_generation.py  32e36af81c9f_fix_model_snip.py  ac4dec5c7907_add_uuid_to_snippet_model.py  b2d75488aca0_initial_migration.py  be6a2cdeda91_change_uuid_column_to_uuid_type.py  d235d2a66cef_обавлена_связь_между_user_и_snippet.py  e1225154d16e_бъединение_миграций.py
src/api/v1/: __init__.py  auth.py  snippet.py  user.py
src/auth/: auth.py
src/core/: config.py  logger.py
src/db/: db.py
src/models/: __init__.py  snippet.py  user.py
src/schemas/: snippet.py  user.py
tests/: test_app.py
